projects/spats/test/Adapter_Trimming/Negative/RRRY_2.fq
@1
GGACAAGCAATGCTTGCCTTGATGTTGAACT
+
##,5,,,++########6++6+###+#####
@2
GGATCCAATTAAATCGGGCTTCGGTCCGGTT
+
##,5,,,++########6++6+###+#####
@3
GATCCAATTAAATCGGGCTTCGGTCCGGTTC
+
##,5,,,++########6++6+###+#####
@4
ATCCAATTAAATCGGGCTTCGGTCCGGTTCA
+
##,5,,,++########6++6+###+#####
@5
AATTAAATCGGGCTTCGGTCCGGTTCATTTA
+
##,5,,,++########6++6+###+#####
@6
AAATCGGGCTTCGGTCCGGTTCATTTAGATC
+
##,5,,,++########6++6+###+#####
@7
CGGGCTTCGGTCCGGTTCATTTAGATCGGAA
+
##,5,,,++########6++6+###+#####
